# OpenClParticles

./: CMakeLists.txt
src/: ParticleSimulationBase.h  ParticleSimulationCpu.h  ParticleSimulationGpu.h  main.cpp  main_gpu.cpp
src/kernels/: kernel.cl
